[ignore] small optimization: use valueOf instead of calling constructor
svn path=/trunk/eXist/; revision=13163


Former-commit-id: 017f3ff5113c9277d115bd3bbc9c4abe4bb84d86